--- a/src/app/Resources/views/server/index.html.twig
+++ b/src/app/Resources/views/server/index.html.twig
@@ -93,6 +93,9 @@
 
                 $that.closest('.card').find('.updates').html(result.updates);
                 $that.closest('.card').find('.criticalUpdates').html(result.criticalUpdates);
+              },
+              error: function() {
+                $that.removeClass('btn-primary').addClass('btn-danger').html('<i class="fa fa-exclamation-triangle"></i>');
               }
             });
 
@@ -122,6 +125,9 @@
 
                 $that.closest('.card').find('.updates').html(result.updates);
                 $that.closest('.card').find('.criticalUpdates').html(result.criticalUpdates);
+              },
+              error: function() {
+                $that.removeClass('btn-primary').addClass('btn-danger').html('<i class="fa fa-exclamation-triangle"></i>');
               }
             });
 
