--- a/src/app/Resources/views/base.html.twig
+++ b/src/app/Resources/views/base.html.twig
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('server_index') }}">Server</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('group_index') }}">Gruppen</a>
+                </li>
                 {% endif %}
             </ul>
             <ul class="navbar-nav my-2 my-lg-0">
@@ -55,6 +58,7 @@
     </div>
 </nav>
 
+{% if app.flashes | length > 0%}
 <div class="container">
     <div class="row">
         <div class="col">
@@ -68,6 +72,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 <div class="container">
     <div class="row">
