--- a/src/app/Resources/views/base.html.twig
+++ b/src/app/Resources/views/base.html.twig
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('group_index') }}">Gruppen</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('user_index') }}">Benutzer</a>
+                </li>
                 {% endif %}
             </ul>
             <ul class="navbar-nav my-2 my-lg-0">
