--- a/src/app/Resources/views/server/index.html.twig
+++ b/src/app/Resources/views/server/index.html.twig
@@ -19,7 +19,7 @@
         <div class="row">
             {% for server in group.servers %}
             <div class="col-xs-12 col-sm-4">
-                <div class="card">
+                <div class="card text-center">
                     <div class="card-block">
                         <h4 class="card-title">{{ server.name }}</h4>
 
@@ -54,7 +54,7 @@
         <div class="row">
             {% for server in ungroupedServers %}
                 <div class="col-xs-12 col-sm-4">
-                    <div class="card">
+                    <div class="card text-center">
                         <div class="card-block">
                             <h4 class="card-title">{{ server.name }}</h4>
 
