--- a/src/app/Resources/views/group/index.html.twig
+++ b/src/app/Resources/views/group/index.html.twig
@@ -12,7 +12,7 @@
     {% for group in groups %}
 
         <div class="col-xs-12 col-sm-4">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title">{{ group.name }}</h4>
 
