--- a/src/app/Resources/views/user/index.html.twig
+++ b/src/app/Resources/views/user/index.html.twig
@@ -12,7 +12,7 @@
     {% for user in users %}
 
         <div class="col-xs-12 col-sm-4">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title">{{ user.name }}</h4>
                     <h6 class="card-subtitle mb-2 text-muted">{{ user.email }}</h6>
