change navbar brand

--- a/src/app/Resources/views/base.html.twig
+++ b/src/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
     </button>
 
     <div class="navbar-container container center-layout">
-        <a class="navbar-brand" href="/">Prider</a>
+        <a class="navbar-brand" href="/">Prider Server Update Management</a>
 
         <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mr-auto">
