--- a/src/app/Resources/views/group/index.html.twig
+++ b/src/app/Resources/views/group/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>Gruppen</h1>
+    <h1>{% trans %}Groups{% endtrans %}</h1>
 
     <p>
         <a class="btn btn-primary" href="{{ path('group_add') }}"><i class="fa fa-plus"></i></a>
