--- a/src/app/Resources/views/delete-form.html.twig
+++ b/src/app/Resources/views/delete-form.html.twig
@@ -21,8 +21,8 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" name="delete" value="yes" class="btn btn-primary">Löschen</button>
-                            <button type="submit" name="cancel" value="yes" class="btn btn-default">Abbrechen</button>
+                            <button type="submit" name="delete" value="yes" class="btn btn-primary">{% trans %}Delete{% endtrans %}</button>
+                            <button type="submit" name="cancel" value="yes" class="btn btn-default">{% trans %}Cancel{% endtrans %}</button>
                         </div>
                     </form>
                 </div>
