--- a/src/app/Resources/views/security/login.html.twig
+++ b/src/app/Resources/views/security/login.html.twig
@@ -7,11 +7,11 @@
                 <div class="login-form">
                     <div class="page-headline">
                         <h1>
-                            Prider Server Update Management
+                            {% trans %}Prider Server Update Management{% endtrans %}
                         </h1>
                     </div>
 
-                    <p>Bitte logge dich mit deiner E-Mail-Adresse und deinem Passwort ein.</p>
+                    <p>{% trans %}Please log in with your mail address and your password.{% endtrans %}</p>
 
                     {% if error %}
                         <div class="text-center">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -20,17 +20,17 @@
                     <form action="{{ path('security_login_check') }}" method="post">
 
                         <div class="form-group">
-                            <label for="username">E-Mail</label>
+                            <label for="username">{% trans %}E-Mail{% endtrans %}</label>
                             <input type="email" id="username" name="_username" class="form-control" tabindex="1" value="{{ last_username }}" />
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Passwort</label>
+                            <label for="password">{% trans %}Password{% endtrans %}</label>
                             <input type="password" id="password" name="_password" class="form-control" tabindex="2" />
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-primary btn-lg" type="submit" tabindex="4">Anmelden</button>
+                            <button class="btn btn-primary btn-lg" type="submit" tabindex="4">{% trans %}Login{% endtrans %}</button>
                         </div>
                     </form>
                 </div>
