--- a/src/app/Resources/views/server/form.html.twig
+++ b/src/app/Resources/views/server/form.html.twig
@@ -36,8 +36,8 @@
                 </div>
 
                 <div class="text-center form-group">
-                    <button type="submit" name="save" value="yes" class="btn btn-primary">Speichern</button>
-                    <button type="submit" name="cancel" value="yes" class="btn btn-secondary">Abbrechen</button>
+                    <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
+                    <button type="submit" name="cancel" value="yes" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</button>
                 </div>
 
                 {{ form_end(form) }}
