--- a/src/app/Resources/views/user/index.html.twig
+++ b/src/app/Resources/views/user/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>Benutzer</h1>
+    <h1>{% trans %}Users{% endtrans %}</h1>
 
     <p>
         <a class="btn btn-primary" href="{{ path('user_add') }}"><i class="fa fa-plus"></i></a>
