--- a/src/app/Resources/views/server/index.html.twig
+++ b/src/app/Resources/views/server/index.html.twig
@@ -18,7 +18,7 @@
 
         <div class="row">
             {% for server in group.servers %}
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-4 pb-3">
                 <div class="card text-center">
                     <div class="card-block">
                         <h4 class="card-title">{{ server.name }}</h4>
