--- a/src/app/Resources/views/server/form.html.twig
+++ b/src/app/Resources/views/server/form.html.twig
@@ -35,6 +35,10 @@
                     {{ form_row(form.group, { 'attr': {'class': 'form-control'} }) }}
                 </div>
 
+                <div class="form-group">
+                    {{ form_row(form.type, { 'attr': {'class': 'form-control'} }) }}
+                </div>
+
                 <div class="text-center form-group">
                     <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
                     <button type="submit" name="cancel" value="yes" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</button>
