--- a/src/app/Resources/views/base.html.twig
+++ b/src/app/Resources/views/base.html.twig
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('user_index') }}">{% trans %}Users{% endtrans %}</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('keyPair_index') }}">{% trans %}Key pairs{% endtrans %}</a>
+                </li>
                 {% endif %}
             </ul>
             <ul class="navbar-nav my-2 my-lg-0">
