change project name

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}{% trans %}Prider Server Update Management{% endtrans %}{% endblock %}</title>
+    <title>{% block title %}{% trans %}Prider Server Management{% endtrans %}{% endblock %}</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" />
@@ -28,7 +28,7 @@
     </button>
 
     <div class="navbar-container container center-layout">
-        <a class="navbar-brand" href="/">{% trans %}Prider Server Update Management{% endtrans %}</a>
+        <a class="navbar-brand" href="/">{% trans %}Prider Server Management{% endtrans %}</a>
 
         <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav mr-auto">
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                &copy; {{ "now" | date("Y") }} {% trans %}Prider Server Update Management{% endtrans %}
+                &copy; {{ "now" | date("Y") }} {% trans %}Prider Server Management{% endtrans %}
             </div>
         </div>
     </div>
