--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -23,6 +23,10 @@
                     {{ form_row(form.plainPassword, { 'attr': {'class': 'form-control'} }) }}
                 </div>
 
+                <div class="form-group">
+                    {{ form_row(form.notifications, { 'attr': {'class': 'form-control'} }) }}
+                </div>
+
                 <div class="text-center form-group">
                     <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
                     <button type="submit" name="cancel" value="yes" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</button>
