--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -24,6 +24,10 @@
                 </div>
 
                 <div class="form-group">
+                    {{ form_row(form.locale, { 'attr': {'class': 'form-control'} }) }}
+                </div>
+
+                <div class="form-group">
                     {{ form_row(form.notifications, { 'attr': {'class': 'form-control'} }) }}
                 </div>
 
