make everything translateable and add german translation for everything

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -7,7 +7,7 @@
                 <div class="login-form">
                     <div class="page-headline">
                         <h1>
-                            {% trans %}Prider Server Update Management{% endtrans %}
+                            {% trans %}Prider Server Management{% endtrans %}
                         </h1>
                     </div>
 
