--- a/app/Resources/views/group/form.html.twig
+++ b/app/Resources/views/group/form.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
 
-                <h1>{{ title }}</h1>
+                <h1>{{ title | trans }}</h1>
 
                 {{ form_start(form) }}
 
