--- a/app/Resources/views/server/form.html.twig
+++ b/app/Resources/views/server/form.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
 
-                <h1>{{ title }}</h1>
+                <h1>{{ title | trans }}</h1>
 
                 {{ form_start(form) }}
 
@@ -45,7 +45,7 @@
 
                 <div class="text-center form-group">
                     <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
-                    <button type="submit" name="cancel" value="yes" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</button>
+                    <a href="{{ path('server_index') }}" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</a>
                 </div>
 
                 {{ form_end(form) }}
