--- a/app/Resources/views/group/index.html.twig
+++ b/app/Resources/views/group/index.html.twig
@@ -4,13 +4,12 @@
 
     <h1>{% trans %}Groups{% endtrans %}</h1>
 
-    <p>
+    <div class="mb-2">
         <a class="btn btn-primary" href="{{ path('group_add') }}"><i class="fa fa-plus"></i></a>
-    </p>
+    </div>
 
     <div class="row">
     {% for group in groups %}
-
         <div class="col-xs-12 col-sm-4">
             <div class="card text-center">
                 <div class="card-block">
@@ -21,7 +20,6 @@
                 </div>
             </div>
         </div>
-
     {% endfor %}
     </div>
 
