--- a/app/Resources/views/server/form.html.twig
+++ b/app/Resources/views/server/form.html.twig
@@ -4,52 +4,24 @@
     <div class="container">
         <div class="row">
             <div class="col">
-
                 <h1>{{ title | trans }}</h1>
 
                 {{ form_start(form) }}
+                    {{ form_errors(form) }}
+                    {{ form_row(form.name) }}
+                    {{ form_row(form.hostname) }}
+                    {{ form_row(form.sshUser) }}
+                    {{ form_row(form.sshPassword) }}
+                    {{ form_row(form.sshPort) }}
+                    {{ form_row(form.group) }}
+                    {{ form_row(form.type) }}
+                    {{ form_row(form.keyPair) }}
 
-                {{ form_errors(form) }}
-
-                <div class="form-group">
-                    {{ form_row(form.name, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.hostname, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.sshUser, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.sshPassword, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.sshPort, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.group, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.type, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="form-group">
-                    {{ form_row(form.keyPair, { 'attr': {'class': 'form-control'} }) }}
-                </div>
-
-                <div class="text-center form-group">
-                    <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
-                    <a href="{{ path('server_index') }}" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</a>
-                </div>
-
+                    <div class="text-center form-group">
+                        <button type="submit" name="save" value="yes" class="btn btn-primary">{% trans %}Save{% endtrans %}</button>
+                        <a href="{{ path('server_index') }}" class="btn btn-secondary">{% trans %}Cancel{% endtrans %}</a>
+                    </div>
                 {{ form_end(form) }}
-
             </div>
         </div>
     </div>
