--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,7 +68,7 @@
             {% for type, flashMessages in app.flashes %}
                 {% for flashMessage in flashMessages %}
                     <div class="alert alert-{{ type }}" role="alert">
-                        {{ flashMessage }}
+                        {{ flashMessage | trans }}
                     </div>
                 {% endfor %}
             {% endfor %}
