--- a/app/Resources/views/group/index.html.twig
+++ b/app/Resources/views/group/index.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
     <h1>{% trans %}Groups{% endtrans %}</h1>
 
-    <div class="mb-2">
+    <div class="mb-3">
         <a class="btn btn-primary" href="{{ path('group_add') }}"><i class="fa fa-plus"></i></a>
     </div>
 
     <div class="row">
     {% for group in groups %}
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title">{{ group.name }}</h4>
@@ -22,5 +21,4 @@
         </div>
     {% endfor %}
     </div>
-
 {% endblock %}
