--- a/app/Resources/views/key-pair/index.html.twig
+++ b/app/Resources/views/key-pair/index.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
     <h1>{% trans %}Key pairs{% endtrans %}</h1>
 
-    <div class="mb-2">
+    <div class="mb-3">
         <a class="btn btn-primary" href="{{ path('keyPair_add') }}"><i class="fa fa-plus"></i></a>
     </div>
 
     <div class="row">
     {% for keyPair in keyPairs %}
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title">{{ keyPair.name }}</h4>
@@ -27,5 +26,4 @@
         </div>
     {% endfor %}
     </div>
-
 {% endblock %}
