--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -1,17 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
     <h1>{% trans %}Users{% endtrans %}</h1>
 
-    <div class="mb-2">
+    <div class="mb-3">
         <a class="btn btn-primary" href="{{ path('user_add') }}"><i class="fa fa-plus"></i></a>
     </div>
 
     <div class="row">
     {% for user in users %}
-
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title">{{ user.name }}</h4>
@@ -22,8 +20,6 @@
                 </div>
             </div>
         </div>
-
     {% endfor %}
     </div>
-
 {% endblock %}
