--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -11,7 +11,7 @@
     {% for user in users %}
         <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">{{ user.name }}</h4>
                     <h6 class="card-subtitle mb-2 text-muted">{{ user.email }}</h6>
 
