--- a/app/Resources/views/group/index.html.twig
+++ b/app/Resources/views/group/index.html.twig
@@ -11,7 +11,7 @@
     {% for group in groups %}
         <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">{{ group.name }}</h4>
 
                     <a class="btn btn-primary" href="{{ path('group_edit', {id: group.id}) }}"><i class="fa fa-edit"></i></a>
