--- a/app/Resources/views/key-pair/index.html.twig
+++ b/app/Resources/views/key-pair/index.html.twig
@@ -11,7 +11,7 @@
     {% for keyPair in keyPairs %}
         <div class="col-xs-12 col-sm-4 pb-3">
             <div class="card text-center">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">{{ keyPair.name }}</h4>
 
                     <div class="pb-3">
