--- a/app/Resources/views/server/index.html.twig
+++ b/app/Resources/views/server/index.html.twig
@@ -19,7 +19,7 @@
             {% for server in group.servers %}
             <div class="col-xs-12 col-sm-4 pb-3">
                 <div class="card text-center">
-                    <div class="card-block">
+                    <div class="card-body">
                         <h4 class="card-title">{{ server.name }}</h4>
 
                         <p class="update-stats">
@@ -54,7 +54,7 @@
             {% for server in ungroupedServers %}
                 <div class="col-xs-12 col-sm-4">
                     <div class="card text-center">
-                        <div class="card-block">
+                        <div class="card-body">
                             <h4 class="card-title">{{ server.name }}</h4>
 
                             <p class="update-stats">
